Release 1.1 (dev)
-----------------
* drop support for django<1.7
* add support for pypy
* new :class:`concurrency.fields.ConditionalVersionField`
* new decorator :class:`concurrency.api.concurrency_disable_increment`

Release 1.0.1
-------------
* fixes :issue:`56` (thanks oppianmatt).


Release 1.0
-----------
* **BACKWARD INCOMPATIBLE**:: dropped support for Django prior 1.6
* code clean
* fixes :issue:`54` (thanks vmspike).
* fixes :issue:`53`. updates Documentation
* :ref:`disable_concurrency` can now disable concurrency in any model
* :ref:`disable_concurrency` is now also a decorator
* **BACKWARD INCOMPATIBLE**:: removed custom backends. ``TriggerVerionField`` can be used with standard Django
* new way to create triggers (thanks Naddiseo)
* new trigger code
* new :method:`TriggerVersionField.check`.
* new :attr:`TriggerVersionField.trigger_name`.
* new :setting:`CONCURRECY_ENABLED` to fully disable concurrency
* new :setting:`CONCURRECY_MANUAL_TRIGGERS` to disable triggers auto creation fixes :issue:`41` (thanks Naddiseo)


Release 0.9
-----------
* Django 1.8 compatibility
* python 3.4 compatibility
* **BACKWARD INCOMPATIBLE** :function:`disable_concurrency` works differently if used with classes or instances
* better support for external Models (models that are part of plugged-in applications)
* fixes issue with TriggerVersionField and Proxy Models (thanx Richard Eames)


Release 0.8.1
-------------
* avoid to use concurrency when selecting all items (select_across)


Release 0.8
-----------
* Django 1.7 compatibility
* fixes typo in ``delete_selected_confirmation.html`` template
* python 3.2/3.3 compatibility


Release 0.7.1
-------------
* backward compatibility updates. Do not check for concurrency if `0` is passed as version value
    (ie. no value provided by the form)


Release 0.7
-----------
* new :class:`concurrency.fields.TriggerVersionField`
* start using pytest
* moved tests outside main package
* new protocol see:ref:`protocols`