@@ -4,6 +4,8 @@ Release 1.1 (dev)
 * add support for pypy
 * new :class:`concurrency.fields.ConditionalVersionField`
 * new decorator :class:`concurrency.api.concurrency_disable_increment`
+* :class:`concurrency.api.disable_concurrency` is now a noop if applied to a model not under concurrency management
+
 
 Release 1.0.1
 -------------
